--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3307/quick?useSSL=false&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://39.108.90.8:3307/quick?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
@@ -41,7 +41,7 @@ spring:
     database: 0
 #    password: alonepig
 #    host: 10.4.68.42
-    host: 127.0.0.1
+    host: 39.108.90.8
     port: 6379
 #    cluster:
 #      nodes: 10.4.68.42:8001,10.4.68.42:8002,10.4.68.42:8003,10.4.68.42:8004,10.4.68.42:8005,10.4.68.42:8006
